# technologies

./: .env.local  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  pyproject.toml  technologies
backend/src/application/use_cases/: user_register.py
backend/src/domain/entities/: user.py
backend/src/domain/repositories/: user_repository.py
backend/src/infrastructure/database/: mongo.py
backend/src/infrastructure/models/: user.py
backend/src/infrastructure/scripts/: test_mongo_db.py
deployment/: .env.kafka  .env.zookeeper
deployment/local/: Dockerfile
