[tool.poetry]
name = "technologies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
ruff = "^0.3.7"
clickhouse-connect = "^0.7.8"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
sqladmin = "^0.16.1"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
