[project]
name = "technologies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "clickhouse-connect>=0.8.5",
    "fastapi>=0.115.4",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "aiohttp>=3.10.10",
]
